apps/overleaf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overleaf
  namespace: storage
  labels:
    app.kubernetes.io/name: overleaf
    app.kubernetes.io/instance: overleaf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overleaf
      app.kubernetes.io/instance: overleaf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overleaf
        app.kubernetes.io/instance: overleaf
      annotations:
        iscsi.stevevaradi.me/eio-remediate: "true"
    spec:
      terminationGracePeriodSeconds: 90
      imagePullSecrets:
        - name: registry-pass
      containers:
        - name: overleaf
          # renovate: datasource=docker depName=harbor.stevevaradi.me/stevevaradi/overleaf-kubernetes
          image: harbor.stevevaradi.me/stevevaradi/overleaf-kubernetes:v0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          resources:
            requests:
              cpu: 15m
              memory: 1024Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/overleaf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: overleaf-data
