apps/overleaf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overleaf
  namespace: storage
  labels:
    app.kubernetes.io/name: overleaf
    app.kubernetes.io/instance: overleaf
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: overleaf
    app.kubernetes.io/instance: overleaf
