apps/overleaf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overleaf
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Overleaf"
    gethomepage.dev/group: "Files & Documents"
    gethomepage.dev/icon: "overleaf.png"
    gethomepage.dev/description: "LaTeX editor"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-overleaf
  hostnames:
    - overleaf.stevevaradi.me
  rules:
    - backendRefs:
        - name: overleaf
          port: 80
